--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,11 +1,18 @@
-<div class="padding-20">
-    <form id="comment-form " class="padding-20">
-        <label for="post-title">New Post Title</label>
-        <input class="padding-20" type="textarea" name="post-title" id="post-title">
-        <label for="post-title">New Text</label>
-        <input class="padding-20" type="textarea" name="post-text" id="post-body">
-        <button class="padding-20" id="create-post-btn">Update!</button>
-    </form>
-</div>
-<link rel="stylesheet" href="/css/single-post.css">
-<script src="/js/update-post.js"></script>
+<h2>Edit or Delete Post</h2>
+<form class="card-body edit-post-form">
+    <div class="form-row">
+        <label for="post-title" class="form-label">Title</label>
+        <input name="post-title" id="title" type="text" value="{{post.title}}" class="form-input form-control" />
+    </div>
+
+    <div class="form-row">
+        <label class="form-label" for="content">Content</label>
+        <input name="content" id="content" type="text" value="{{post.content}}" class="form-input form-control" />
+    </div>
+    <button id="update" type="submit" class="btn btn-primary">UPDATE POST</button>
+    <button id="delete" type="submit" class="btn delete-post-btn btn-primary">DELETE POST</button>
+</form>
+
+
+<script src="/js/edit-post.js"></script>
+<script src="/js/delete-post.js"></script>
