--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,42 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>Tech Blog</title>
-    <link rel="stylesheet" href="/css/main.css">
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tech Blog</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-    {{!-- Nav bar that goes on every page --}}
-    <nav id="navbar">
-        <ul id="navbar-ul">
-            <li>
-                <p><a class="link" href="/">Home</a></p>
-            </li>
-            {{#if loggedIn}}
-            <li>
-                <p><a class="link" href="/dashboard">Dashboard</a></p>
-            </li>
-            <li>
-                <p><button id="logout-btn" class="btn-no-style">Logout</button> </p>
-            </li>
+  <div>
+    <header>
+      <h1><a class="title" href="/">Tech Blog</a></h1>
+      <nav class="navbar">
+        <a class="link" href="/">Home</a>
+        <a class="link" href="/dashboard">Dashboard</a>
+        {{#if logged_in}}
+        <a class="link" href="/" id="logout">Logout</a>
+        {{else}}
+        <a class="link" href="/login">Login</a>
+        {{/if}}
+      </nav>
+    </header>
 
-            {{else}}
-            <li>
-                <p><a class="link" href="/login">Login</a></p>
-            </li>
-            {{/if}}
-        </ul>
-        <h1 id="nav-header">The Tech Blog</h1>
-    </nav>
-    {{{body}}}
+    <main>
+      {{{ body }}}
+    </main>
 
+    {{#if logged_in}}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/logout.js"></script>
+    {{/if}}
+  </div>
 </body>
-{{!--
-<script src="/js/nav.js"></script> --}}
-<script src="/js/logout.js"></script>
-<script src="/js/home.js"></script>
 
 </html>
